# DTChat

./: .gitmodules  Cargo.toml  Justfile  LICENSE  README.md  build.rs  database.yaml  dtchat.just  peer-config.yaml
.github/workflows/: ci.yaml  rules.yaml
db/local/: tcp-1.yaml  tcp-2.yaml  udp-1.yaml  udp-2.yaml
github/workflows/: ci.yaml  rules.yaml
src/: app.rs  main.rs  message.rs  peer_config.rs  ui.rs
src/config/: ack_config.rs  app_config.rs  mod.rs  prediction.rs
src/domain/: message.rs  mod.rs  peer.rs  room.rs
src/layout/: body.rs  footer.rs  header.rs  informations.rs  menu_bar.rs  message_forge.rs  message_list_view.rs  message_prompt.rs  mod.rs  ui.rs
src/layout/rooms/: message_forge.rs  message_prompt.rs  message_settings_bar.rs  mod.rs
src/layout/rooms/actions/: create_room.rs
src/layout/rooms/views/: message_graph.rs  message_list.rs  message_table.rs  mod.rs
src/network/: README.md  encoding.rs  endpoint.rs  engine.rs  message_router.rs  mod.rs  monitor.rs  peer_manager.rs  socket.rs
src/network/protocols/: ack.rs  mod.rs  protobuf.rs
src/proto/: message.proto
src/ui/: app.rs  menu.rs  mod.rs
src/ui/components/: message_forge.rs  message_input.rs  message_settings.rs  mod.rs
src/ui/views/: message_graph.rs  message_list.rs  message_settings_bar.rs  mod.rs
src/ui/views/rooms/actions/: create_room.rs  mod.rs
src/utils/: ack.rs  bpsocket.rs  colors.rs  config.rs  message.rs  mod.rs  network_config.rs  prediction_config.rs  proto.rs  socket.rs  yaml.rs
