[package]
name = "DTChat"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31.0"
chrono = "0.4"
eframe = "0.31.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
socket2 = "0.4"
tokio = { version = "1.30", features = ["rt-multi-thread", "macros", "io-util", "net", "time"] }
async-trait = "0.1"
once_cell = "1.17"

[features]
add_delay = []
bp = []