[package]
name = "DTChat"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31.0"
eframe = "0.31.0"
serde = { version = "1.0.217", features = ["derive"] }
socket2 = "0.5.10"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "sync"] }
async-trait = "0.1"
once_cell = "1.17"
egui_plot = "0.31.0"
prost = "0.14.1"
bytes = "1.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
libc = "0.2.174"
a_sabr = { git ="https://github.com/DTN-MTP/A-SABR.git", branch = "main", features = ["contact_work_area", "contact_suppression"] }
chrono = "0.4.41"
serde_yaml = "0.9.33"
rand = "0.9.1"

[features]
bp = []
dev = []
ack-delay = []

[build-dependencies]
prost-build = "0.14.1"
